updating the readme.md

--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -1,8 +1,369 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "75d2c6ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\abhil\\\\OneDrive\\\\Desktop\\\\ABHIL\\\\Demo\\\\Gadget_recommendation_Engine_Using_LLM'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "328dfe01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "os.chdir('..')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b59c754a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.document_loaders import PyPDFLoader, DirectoryLoader\n",
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "2f8cb9b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#extract text from PDF file\n",
+    "def load_pdf_file(data):\n",
+    "    loader = DirectoryLoader(data, \n",
+    "                             glob=\"*.pdf\", \n",
+    "                             loader_cls=PyPDFLoader)\n",
+    "    \n",
+    "    documents = loader.load()\n",
+    "    \n",
+    "    return documents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2e0dc062",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "extracted_data = load_pdf_file(data='Data/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b51f0af4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#extracted_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "2a020b80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#split text into smaller chunks\n",
+    "def text_split(extracted_data):\n",
+    "    text_splitter = RecursiveCharacterTextSplitter(chunk_size=500, chunk_overlap=20)\n",
+    "    texts_chunks = text_splitter.split_documents(extracted_data)\n",
+    "\n",
+    "    return texts_chunks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "cc966f81",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "length of text chunks: 5859\n"
+     ]
+    }
+   ],
+   "source": [
+    "text_chunks = text_split(extracted_data)\n",
+    "print(f\"length of text chunks: {len(text_chunks)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "34029d2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.embeddings import HuggingFaceEmbeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "f6e7d995",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def download_hugging_face_embeddings():\n",
+    "\n",
+    "    # Download the embedding model\n",
+    "    embedding_model = HuggingFaceEmbeddings(model_name=\"sentence-transformers/all-MiniLM-L6-v2\")\n",
+    "\n",
+    "    return embedding_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "bd5784eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\abhil\\miniconda3\\envs\\gadgetbot\\Lib\\site-packages\\huggingface_hub\\file_download.py:143: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\abhil\\.cache\\huggingface\\hub\\models--sentence-transformers--all-MiniLM-L6-v2. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
+      "  warnings.warn(message)\n",
+      "Xet Storage is enabled for this repo, but the 'hf_xet' package is not installed. Falling back to regular HTTP download. For better performance, install the package with: `pip install huggingface_hub[hf_xet]` or `pip install hf_xet`\n"
+     ]
+    }
+   ],
+   "source": [
+    "embeddings = download_hugging_face_embeddings()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "e3ff2d35",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "length 19\n"
+     ]
+    }
+   ],
+   "source": [
+    "query_results = embeddings.embed_documents(\"Hello, how are you?\")\n",
+    "print(\"length\", len(query_results))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "b324065c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#query_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "cf3c9bad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2e719a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Pinecone_API_KEY = os.environ.get(\"PINECONE_API_KEY\")\n",
+    "Pinecone_Environment = os.environ.get(\"PINECONE_ENVIRONMENT\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "8efda090",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{\n",
+       "    \"name\": \"gadgetbot\",\n",
+       "    \"metric\": \"cosine\",\n",
+       "    \"host\": \"gadgetbot-hk9iesg.svc.aped-4627-b74a.pinecone.io\",\n",
+       "    \"spec\": {\n",
+       "        \"serverless\": {\n",
+       "            \"cloud\": \"aws\",\n",
+       "            \"region\": \"us-east-1\"\n",
+       "        }\n",
+       "    },\n",
+       "    \"status\": {\n",
+       "        \"ready\": true,\n",
+       "        \"state\": \"Ready\"\n",
+       "    },\n",
+       "    \"vector_type\": \"dense\",\n",
+       "    \"dimension\": 384,\n",
+       "    \"deletion_protection\": \"disabled\",\n",
+       "    \"tags\": null\n",
+       "}"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pinecone.grpc import PineconeGRPC as pinecone\n",
+    "from pinecone import ServerlessSpec\n",
+    "import os\n",
+    "\n",
+    "pc = pinecone(api_key=Pinecone_API_KEY)\n",
+    "\n",
+    "index_name = \"gadgetbot\"\n",
+    "\n",
+    "\n",
+    "pc.create_index(\n",
+    "    name=index_name,\n",
+    "    dimension=384,  # Dimension of the embedding model\n",
+    "    metric=\"cosine\",  # Similarity metric\n",
+    "    spec=ServerlessSpec(\n",
+    "        cloud=\"aws\",\n",
+    "        region=\"us-east-1\"\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "b8776db9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ[\"PINECONE_API_KEY\"] = Pinecone_API_KEY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "440e4033",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_pinecone import PineconeVectorStore\n",
+    "# Embed each chunk and upsert the embeddings to Pinecone\n",
+    "docsearch = PineconeVectorStore.from_documents(\n",
+    "    documents=text_chunks,\n",
+    "    index_name = index_name,\n",
+    "    embedding=embeddings,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "51f43ec0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Load existing index if it already exists\n",
+    "# Uncomment the following lines if you want to load an existing index instead of creating a new one\n",
+    "\n",
+    "from langchain_pinecone import PineconeVectorStore\n",
+    "# Embed each chunk and upsert the embeddings to Pinecone\n",
+    "docsearch = PineconeVectorStore.from_existing_index(\n",
+    "    index_name = index_name,\n",
+    "    embedding=embeddings,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "3c982f00",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<langchain_pinecone.vectorstores.PineconeVectorStore at 0x1ef2edf61b0>"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "docsearch"
+   ]
+  }
+ ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "gadgetbot",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
